# simple_example_projects

./: .gitignore  LICENSE  README.md
.github/workflows/: cmake.yml
CardGames/scripts/: play_blackjack.py  play_war.py  playing_cards.py
CardGames/test/: card_test.py  deck_test.py
TicTacToe/: CMakeLists.txt
TicTacToe/include/: board.h  tictactoe.h
TicTacToe/scripts/: tictactoe.py
TicTacToe/src/: board.cpp  main.cpp  tictactoe.cpp
TicTacToe/test/: board_test.cpp
